
=======================================================
            WanT code:  Log of Changes 
=======================================================

21 Jun 2005      Plot utility finally updated and tested. USPP not implemented but
                 for plotting purposes it seems to work anyway. Test2 and Test8 
                 updated. (AF)

17 Jun 2005      plot.x re-syncronized to the current status of implementation
                 of the code. Not fully tested. Routine convert_label.f90 
                 added to libs. (AF) 

13 Jun 2005      Standard names for data outfiles of transport calculations
                 ('dos.out' and 'cond.out') changed to 'dos.dat' and 'cond.dat'.
                 Test scripts updated accordingly. (AF)

12 Jun 2005      Iotk COLUMNS flag used instead of FMT in write calls. (AF)

10 Jun 2005      Bug fixed in hamiltonian_calc.f90 (RHAM writing). (AF)

07 Jun 2005      Correlation corrections in transport calculations added in the
                 conductor.x program. transmittance.f90 routine added to Transport. 
                 Input format changes, README.input updated. (AF)

06 Jun 2005      Bug fixed in blc2wan.f90 ; checks performed. Clean up in the transport
                 code in order to easily introduce the correlation stuff. (AF)

02 Jun 2005      blc2wan.f90 written and properly compiling. (AF)

01 Jun 2005      routine hamiltonian moved to hamiltonian_calc, module hamiltonian_module
                 added in order to manage low-level operations. Program bands.x updated 
                 and modified. (AF)

31 May 2005      hamiltonian.x splitted into a routine (hamiltonian.f90) called by
                 wannier.x and a further band interpolation post-processing (bands.x);
                 tests and documentation updated. (AF)

20 May 2005      Driving functional term for conditioned minimization added in the
                 domega_aux routine. Related changes in input routined added. (AF)
